<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RECTO</string>
    <string name="profile">profile</string>
    <string name="hello_user">가린지선다님, 반갑습니다.</string>
    <string name="edit">EDIT</string>
    <string name="for_free">for free</string>
    <string name="make_photo_card">make photo card</string>
    <string name="previous_btn">previous</string>
    <string name="next_btn">next</string>
    <string name="private_card">private_card</string>
    <string name="public_card">public_card</string>
    <string name="choose_frame">원하는 모양을 선택해주세요.</string>
    <string name="onlyphoto_frame">확장형</string>
    <string name="phrases_frame">문구형</string>
    <string name="select_video">영상을 등록해주세요</string>
    <string name="select_video_btn">영상 등록</string>
    <string name="select_photo">사진을 등록해주세요</string>
    <string name="select_photo_btn">사진 등록</string>
    <string name="writeinfo_text">문구를 입력해주세요.</string>
    <string name="writeinfo_date">날짜를 입력해주세요.</string>
    <string name="writeinfo_password">비밀번호를 입력해주세요.</string>
    <string name="password">숫자 4자리로 입력해주세요.</string>
    <string name="date">날짜</string>
    <string name="text">띄어쓰기 포함 13자 이내로 작성해주세요.</string>
    <string name="photocard_success">나만의 포토카드가 완성되었어요.\n 이대로 제작할까요?</string>
    <string name="accept">accept</string>
    <string name="tempdate">0000.00.00</string>
    <string name="list">list</string>
    <string name="photo_card">photo card</string>
    <string name="lock_open">lock open</string>
    <string name="question">question</string>
    <string name="download">download</string>
    <string name="iv_recto">iv_recto</string>
    <string name="iv_info">iv_info</string>
    <string name="a204">A204 가린지선다</string>
    <string name="iv_web">Website : http://home.recto.kr</string>
    <string name="iv_developers">김현지, 박예린, 신가영, 최다애, 최은선</string>
    <string name="iv_contact">Contact us : eun.developer@gmail.com</string>
    <string name="you_made_it">you made it!</string>
    <string name="someone_gave_you">someone gave you!</string>
    <string name="lock">lock</string>
    <string name="delete">delete</string>
    <string name="from_ex">from. 동탄핵주먹</string>
    <string name="for_phrases">for phrases</string>
    <string name="card_logo">card_logo</string>
    <string name="gift">gift</string>
    <string name="server_client_id1">148360455436-191no0dmnda6brjnrcas0mj4mgq05a5d.apps.googleusercontent.com</string>
    <string name="server_client_id2">148360455436-u5pcjjbpq2u1pbgcna11eu3880bgf182.apps.googleusercontent.com</string>
    <string name="server_client_id3">148360455436-bs0iml8g15f4brkml6l9qi2m10pb33tm.apps.googleusercontent.com</string>
    <string name="mine_card">mine_card</string>
    <string name="gift_card">gift_card</string>
    <string name="retry">retry</string>
    <string name="next">next</string>
    <string name="back">Exit</string>
    <string name="numberConfirm">가 맞습니까?</string>
    <string name="public_text">무료 제공 포토카드를 즐기세요!</string>
    <string name="privacy_text"><![CDATA[<가린지선다>(\'http://www.recto.kr/\' 이하 \'RECTO\')은(는) 「개인정보 보호법」 제30조에 따라 정부주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.\n
○ 이 개인정보처리방침은 2021년 5월 10부터 적용됩니다.\n
\n
**제1조(개인정보의 처리 목적)\n
<가린지선다>(\'http://www.recto.kr/\' 이하 \'RECTO\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 겨우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.**\n
\1. 홈페이지 회원가입 및 관리\n
회원 가입의사 확인, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인정보를 처리합니다.\n
\2. 재화 또는 서비스 제공\n
콘텐츠 제공을 목적으로 개인정보를 처리합니다.\n
\n
**제2조(개인정보의 처리 및 보유 기간)**\n
① <가린지선다>은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.\n
② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.\n
1.<홈페이지 회원가입 및 관리>\n
<홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.\n
보유근거 : 홈페이지 회원정보 수집 및 이용에 관한 기록\n
관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년\n
2.<제화 또는 서비스 제공>\n
<제화 또는 서비스 제공>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.\n
1) android.permission.CAMERA\n
카메라의 기능을 수행하기 위하여 사용.
2)android.permission.WRITE_EXTERNAL_STORAGE\n
사진정보저장 등의 기능을 수행하기 위하여 사용.
3)android.permission.READ_EXTERNAL_STORAGE\n
앨범 접근 등의 기능을 수행하기 위하여 사용.\n
\n
**제3조(정보주체와 법정대리인의 권리·의무 및 그 행사방법)**\n
① 정보주체는 가린지선다에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n
② 제1항에 따른 권리 행사는가린지선다에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 가린지선다은(는) 이에 대해 지체 없이 조치하겠습니다.\n
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n
⑥ 가린지선다은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.\n
\n
**제4조(처리하는 개인정보의 항목 작성)**\n
① <가린지선다>은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n
필수항목 : 이메일, 비밀번호, 로그인ID\n
선택항목 : 닉네임, 프로필 사진, 사진 앨범, 동영상\n
\n
**제5조(개인정보의 파기)**\n
① <가린지선다> 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.\n
② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.\n
③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.\n
\1. 파기절차 <가린지선다> 은(는) 파기 사유가 발생한 개인정보를 선정하고, <가린지선다> 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.\n
\2. 파기방법\n
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.\n
\n
**제6조(개인정보의 안전성 확보 조치)\n
<가린지선다>은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.**\n
\1. 개인정보 취급 직원의 최소화 및 교육 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.\n
\2. 개인정보의 암호화 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.\n
\3. 개인정보에 대한 접근 제한 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n
\n
**제7조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항)**\n
① 가린지선다 은(는) 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.\n
② 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.\n
가. 쿠키의 사용 목적 : 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.\n
나. 쿠키의 설치•운영 및 거부 : 웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부 할 수 있습니다.\n
다. 쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.\n
\n
**제8조(개인정보 처리방침 변경)**\n
① 이 개인정보처리방침은 2021년 5월 10부터 적용됩니다.]]></string>
</resources>