<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/make_photo_card"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:labelFor="@+id/et_text"
            android:text="@string/writeinfo_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/text"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:labelFor="@+id/et_date"
            android:text="@string/writeinfo_date"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/date"
            android:textSize="20sp"
            android:padding="10dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:radius="20dp"
                android:text="@string/previous_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/next_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>