<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/make_photo_card"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photocard_success"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempdate"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/imageButtonPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/empty_frame"
            android:contentDescription="@string/private_card" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:radius="20dp"
                android:text="@string/previous_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>