<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/eulyoo1945_semibold"
            android:text="@string/make_photo_card"
            android:textColor="@color/brown"
            android:textSize="27sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eulyoo1945_regular"
            android:text="@string/photocard_success"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eulyoo1945_semibold"
            android:text="@string/tempdate"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/card_frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/iv_success"
                android:layout_width="183dp"
                android:layout_height="288dp"
                android:contentDescription="@string/public_card"
                android:src="@drawable/card_layout" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="183dp"
                android:layout_height="243dp"
                android:contentDescription="@string/photo_card"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/card_image" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="18dp"
                android:src="@drawable/card_logo"
                android:contentDescription="@string/card_logo" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/eulyoo1945_semibold"
                android:radius="20dp"
                android:text="@string/previous_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/eulyoo1945_semibold"
                android:text="accept"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>