<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publiccard.PublicFragmentCardDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/free_photo_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- list button -->
                <Button
                    android:id="@+id/free_photo_card_list_btn"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/eulyoo1945_semibold"
                    android:text="@string/list"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/brown"
                    app:cornerRadius="10dp"
                    tools:ignore="RelativeOverlap" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap,UseCompoundDrawables">

                    <!-- private or public -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:contentDescription="@string/lock_open"
                        android:src="@drawable/lock_open" />

                    <TextView
                        android:id="@+id/free_photo_card_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/eulyoo1945_semibold"
                        android:text="@string/photo_card"
                        android:textColor="@color/brown"
                        android:textSize="30sp" />

                </LinearLayout>

                <!-- information (dialog) -->
                <ImageView
                    android:id="@+id/info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/question"
                    android:src="@drawable/question" />

            </RelativeLayout>


            <FrameLayout
                android:id="@+id/card_frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp">

                <ImageView
                    android:id="@+id/iv_success"
                    android:layout_width="183dp"
                    android:layout_height="288dp"
                    android:contentDescription="@string/public_card"
                    android:src="@drawable/card_layout" />

                <ImageView
                    android:id="@+id/card_image_detail"
                    android:layout_width="183dp"
                    android:layout_height="243dp"
                    android:contentDescription="@string/photo_card"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/card_image" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="18dp"
                    android:src="@drawable/card_logo_big"
                    android:contentDescription="@string/card_logo" />

                <TextView
                    android:id="@+id/card_id"
                    android:layout_width="55dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginVertical="16dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="10dp" />

            </FrameLayout>


            <Button
                android:id="@+id/download_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="@font/eulyoo1945_semibold"
                android:text="@string/download"
                android:textColor="@color/white"
                app:backgroundTint="@color/brown"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>